# basic_fastapi

./: README.md  models.py  pyproject.toml
