[project]
name = "basic_fastapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aldo Venegas", email = "aldo.venegas@luzcapital.com"},
]
dependencies = [
    "fastapi>=0.111.1",
    "uvicorn>=0.30.4",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.2",
    "sqlmodel>=0.0.21",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
